# BME688-Project

./: .gitignore  Engineering Report.md  Install.py  Notes.md  README.md  Report.docx  Report_1.md
BME688_CPP_Code/: platformio.ini
BME688_CPP_Code/BME688_CPP_CODE_BSEC/: platformio.ini
BME688_CPP_Code/bsec/: platformio.ini
BME688_CPP_Code/data/: config.json
BME688_CPP_Code/include/: main.h
BME688_CPP_Code/src/: main.cpp
BME688_Data_Handler/: Label_Encoder.csv
BME688_Data_Handler/BSEC_Class/bsec_interface/: CMakeLists.txt  platformio.ini  process_data.py
BME688_Data_Handler/BSEC_Class/bsec_interface/.pio/libdeps/featheresp32/bsec2/: .piopm
BME688_Data_Handler/BSEC_Class/bsec_interface/include/: bsec_interface.h
BME688_Data_Handler/BSEC_Class/bsec_interface/src/: bsec_interface.cpp
BME688_Data_Handler/BackupFiles/: dataCollection.py
BME688_Data_Handler/Bulk Training Data/: 29_01_2025_air_vs_Butgric_Ethanol_2.csv
BME688_Data_Handler/DataClassification/: dataClassification.py  dataProcessor.py  data_classifier_model.joblib  model_metrics.json
BME688_Data_Handler/DataClassification_MLP/: dataClassification.py
BME688_Data_Handler/DataClassification_RandomForest/: data_classifier_model.joblib  model_metrics.json
BME688_Data_Handler/DataClassification_XgBoost/: dataClassification.py  (+1 more)
BME68X/: Install.py  Install.spec  requirements.txt
Test_files/: Test_Report.docx  Test_Report.md  tea_coffee_test_25_03_2025.csv  tea_coffee_test_25_03_2025_pro.csv
Validation/: Report.md
launchers/: launch_classification.command  launch_data_collection.command
(+153 files in other folders)
